--- a/style.css
+++ b/style.css
@@ -52,3 +52,14 @@
 .cursor-pointer {
     cursor: pointer;
 }
+@media (max-width:750px) {
+    .div-profile {
+        flex-direction: column;
+        align-items: center;
+    }
+    .div-2-profile {
+        margin: 0px;
+        padding: 0px;
+        padding-bottom: 40px;
+    }
+}
